# batch_sequencing_optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_graphs.py
demos/: batch_by_size_demo.py  batching_demo_LD_clustersplit.py  batching_demo_LD_deliveryzone_clustersizeconstraint.py  batching_demo_LD_deliveryzone_noconstraints.py  batching_demo_LD_deliveryzone_numclusterconstraints.py  batching_demo_LD_distribution.py  batching_demo_assignmentmatching_L1.py  batching_demo_assignmentmatching_L2.py  batching_demo_realistic_example.py  batching_demo_sizedist_KL.py  batching_demo_sizedist_L1.py  batching_demo_sizedist_L2.py  create_graph.py  kmedoid_example.py  kmedoids_optimizer_demo.py  kmedoids_optimizer_demo_maxk_hardconstraint.py  kmedoids_optimizer_demo_numclusters_cost_and_constraint.py  kmedoids_optimizer_demo_smart_modifier.py  optimizer_demo.py  regression_example.py  update_LD.py
graphdata/: dom.mars.us.TXLRDC.parquet  dom.mars.us.TXLRDC_edges.parquet  dom.mars.us.TXLRDC_nodes.parquet  dom.nri.can.ma.parquet  dom.nri.can.ma_edges.parquet  dom.nri.can.ma_nodes.parquet  dom.nri.can.tb.parquet  dom.nri.can.tb_edges.parquet  dom.nri.can.tb_nodes.parquet  dom.nri.can.va.parquet  dom.nri.can.va_edges.parquet  dom.nri.can.va_nodes.parquet  dom.nri.can.vb.parquet  dom.nri.can.vb_edges.parquet  dom.nri.can.vb_nodes.parquet  dom.nri.can.ve.parquet  dom.nri.can.ve_edges.parquet  dom.nri.can.ve_nodes.parquet  dom.nri.us.la.parquet  dom.nri.us.la_edges.parquet  dom.nri.us.la_nodes.parquet  dom.nri.us.la_pilot.parquet  dom.nri.us.la_pilot_arc_walkway.parquet  (+23 more)
(+68 files in other folders)
