[tool.poetry]
name = "opt-tools"
version = "0.1.0"
description = ""
authors = ["HasanVerses <135659832+HasanVerses@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "opt_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "2.7.1"
numpy = "^1.25.2"
pandas = "1.4.2"
pytest = "7.1.1"
tqdm = "4.64.0"
requests = "2.28.1"
imageio = "2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
